--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 h1{
+	background-image: url("image2.png");
+	height: 150px;
+	border-radius: 50px;
+	color: white;
 	text-align: center;
 	font-family: "Times New Roman", Georgia, Serif;
 }
@@ -15,18 +19,22 @@ h1{
 	background-color: yellow;
 }
 h3{
-	border: 1px solid black;
+	border: 3px solid black;
+	border-right: 0px;
+	border-top: 0px;
+	border-radius: 25px 50px 50px 0px;
 	width: 100px;
 	text-align: center;
 	margin-top: 0;
-	margin-right: 0;
+	margin-right: 4px;
 	margin-bottom: 5px;
 	float: right;
 }
 .food{
 	background-color: gray;
-	border: 1px solid black;
-	height: 150px;
+	border: 3px solid black;
+	border-radius: 25px 25px 50px 0px;
+	height: 200px;
 	margin: 20px;
 
 }
